--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <!-- 이거 나중에 버튼으로 구현할 수 있으면 해봐 -->
           <a href="home.html" title="Home">- Home</a><br>
           <a href="sns.html" title="SNS">- SNS</a><br>
-          <a href="contact.html" title="Contact">- Contact</a><br>
+          <a href="contact.html" title="Contact" style="color:rgb(18, 209, 91);">- Contact</a><br>
           <a href="tmi.html" title="TMI">- TMI</a>
       </aside>
         <main>
@@ -50,12 +50,12 @@
             </p>
         </main>
     </div>
-    <!-- when width is shorter than 670px -->
+    <!-- grid2 : when width is shorter than 670px -------------------------------------------------------------------->
     <div id="grid2">
       <div class="banner">
         <div class="item1"><a href="home.html" title="Home">Home</a></div>
         <div class="item2"><a href="sns.html" title="SNS">SNS</a></div>
-        <div class="item3"><a href="contact.html" title="">Contacts</a></div>
+        <div class="item3"><a href="contact.html" title="Contact" style="color:rgb(18, 209, 91);">Contacts</a></div>
         <div class="item4"><a href="tmi.html" title="TMI">TMI</a></div>
       </div>
         
