--- a/sns.html
+++ b/sns.html
@@ -6,23 +6,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!---->
+    <!--header--------------------------------------------------------------------------------------->
     <header>
-      <h1><a href="home.html" title="[Home] Hwang Yoojin" style="text-decoration:none;">황유진</a></h1>
+      <a class="PageName" href="home.html" title="[Home] Hwang Yoojin">Yoojin.H</a>
     </header>
-  <!-- when width is longer than 670px -->
+    <!-- when width is longer than 700px ------------------------------------------------------------>
     <div id="grid1">
-        <aside>
-            <a href="sns.html" title="SNS_HwangYoojin">Yoojin's SNS</a><br>
-            <a href="contact.html" title="Contact_HwangYoojn">Yoojin's Contact</a>
-        </aside>
+      <aside class="menu">
+        <!-- 이거 나중에 버튼으로 구현할 수 있으면 해봐 -->
+          <a href="home.html" title="Home">- Home</a><br>
+          <a href="sns.html" title="SNS" style="color:rgb(18, 209, 91);">- SNS</a><br>
+          <a href="contact.html" title="Contact">- Contact</a><br>
+          <a href="tmi.html" title="TMI">- TMI</a>
+      </aside>
         <main>
-            <img src="ggongzi.png" width="100px" style="margin:30px;">
-            <p style="margin-left: 30px;">
+            <img class="ggongzi" src="ggongzi.png">
+            <p>
                 안녕하세요 저는 <strong>황유진</strong>입니다.<br>
                 저는 부경대학교에서 컴퓨터공학과 3학년에 재학 중입니다.<br>
             </p>       
-          <table class="table1" border="1">
+          <table class="table1">
             <tr>
               <td>나이</td>
               <td>21</td>
@@ -39,20 +42,22 @@
             <!--Button tag-->
             <button class="button1">Button</button>
             <h2 style="margin-left:30px;">
-                [ Hwang Yoojin의 SNS 링크.. ]    
-            </h2>
-    
-            <p id="link" style="margin-left:40px;">
-                -><a href="https://blog.naver.com/dddpdpdppddd" target="_blank" title="Yoojin's Blog">Naver Blog</a><br>
-                -><a href="https://www.instagram.com/hwngyoojin/" target="_blank" title="Yoojin's Blog">Instagram</a>
-            </p>
+              [ Hwang Yoojin의 SNS 링크.. ]    
+          </h2>
+  
+          <p id="link" style="margin-left:40px;">
+              -><a href="https://blog.naver.com/dddpdpdppddd" target="_blank" title="Yoojin's Blog">Naver Blog</a><br>
+              -><a href="https://www.instagram.com/hwngyoojin/" target="_blank" title="Yoojin's Blog">Instagram</a>
+          </p>
         </main>
     </div>
-    <!-- when width is shorter than 670px -->
+    <!-- grid2 : when width is shorter than 670px -------------------------------------------------------------------->
     <div id="grid2">
         <div class="banner">
-          <div class="item1"><a href="sns.html" title="SNS_HwangYoojin">Yoojin's SNS</a></div>
-          <div class="item2"><a href="contact.html" title="Contact_HwangYoojn">Yoojin's Contact</a></div>
+          <div class="item1"><a href="home.html" title="Home">Home</a></div>
+          <div class="item2"><a href="sns.html" title="SNS" style="color:rgb(18, 209, 91);">SNS</a></div>
+          <div class="item3"><a href="contact.html" title="">Contacts</a></div>
+          <div class="item4"><a href="tmi.html" title="TMI">TMI</a></div>
         </div>
         
         <img src="ggongzi.png" width="100px" style="margin:30px;">
@@ -60,7 +65,7 @@
             안녕하세요 저는 <strong>황유진</strong>입니다.<br>
             저는 부경대학교에서 컴퓨터공학과 3학년에 재학 중입니다.<br><br>
         </p>
-        <table class="table1" border="1">
+        <table class="table1" border="1" style="margin-left:30px">
             <tr>
               <td>나이</td>
               <td>21</td>
@@ -75,15 +80,15 @@
              </tr>
         </table>
         <!--Button tag-->
-        <button class="button1">Button</button>
+        <button class="button1" style="margin-left:30px;">Button</button>
         <h2 style="margin-left:30px;">
-            [ Hwang Yoojin의 SNS 링크.. ]    
-        </h2>
+          [ Hwang Yoojin의 SNS 링크.. ]    
+      </h2>
 
-        <p id="link" style="margin-left:40px;">
-            -><a href="https://blog.naver.com/dddpdpdppddd" target="_blank" title="Yoojin's Blog">Naver Blog</a><br>
-            -><a href="https://www.instagram.com/hwngyoojin/" target="_blank" title="Yoojin's Blog">Instagram</a>
-        </p>
+      <p id="link" style="margin-left:40px;">
+          -><a href="https://blog.naver.com/dddpdpdppddd" target="_blank" title="Yoojin's Blog">Naver Blog</a><br>
+          -><a href="https://www.instagram.com/hwngyoojin/" target="_blank" title="Yoojin's Blog">Instagram</a>
+      </p>
     </div>
 </body>
 </html>
