--- a/tmi.html
+++ b/tmi.html
@@ -17,53 +17,77 @@
             <a href="home.html" title="Home">- Home</a><br>
             <a href="sns.html" title="SNS">- SNS</a><br>
             <a href="contact.html" title="Contact">- Contact</a><br>
-            <a href="tmi.html" title="TMI">- TMI</a>
+            <a href="tmi.html" title="TMI" style="color:rgb(18, 209, 91);">- TMI</a>
         </aside>
         <main>
-            제가 요즘 좋아하는 노래들 입니다~!!<br>
-            <table class="table_song">
-                <tr>
-                  <td>나이</td>
-                  <td>21</td>
-                </tr>
-                <tr>
-                  <td>생일</td>
-                  <td>FEB 17</td>
-                </tr>
-                <tr>
-                  <td>mbti</td>
-                  <td>INFP</td>
-                 </tr>
-              </table>
-        </main>
-    </div>
-    <!-- when width is shorter than 670px -->
-    <div id="grid2">
-        <div class="banner">
-          <div class="item1"><a href="home.html" title="Home">Home</a></div>
-          <div class="item2"><a href="sns.html" title="SNS">SNS</a></div>
-          <div class="item3"><a href="contact.html" title="">Contacts</a></div>
-          <div class="item4"><a href="tmi.html" title="TMI">TMI</a></div>
-        </div>
-        <main>
-          <p>
-            제가 요즘 좋아하는 노래들 입니다~!!<br>
-            노래 제목을 눌러 들어보세용<br>
-          </p>
+          <h3 class="intro">
+            <br>These are my FAVORITE songs and Photos!!
+          </h3>
           <table class="table_song">
               <tr>
                 <td>Mac Miller</td>
-                <td><a href="https://youtu.be/6bMmhKz6KXg?si=C5f4zuQEFOvHvlb1" title="Knock Knock">Knock Knock</a></td>
+                <td><a href="https://youtu.be/6bMmhKz6KXg?si=C5f4zuQEFOvHvlb1" target="_blank" title="Knock Knock">Knock Knock</a></td>
               </tr>
               <tr>
                 <td>Beenzino</td>
-                <td><a href="https://youtu.be/ojQoCfTRTkw?si=KQQFzZqkrPKk_KKT" title="Sandman">Sandman</a></td>
+                <td><a href="https://youtu.be/ojQoCfTRTkw?si=KQQFzZqkrPKk_KKT" target="_blank" title="Sandman">Sandman</a></td>
               </tr>
               <tr>
                 <td>Youra</td>
                 <td>구운듯한 얼굴이 너의 모티프</td>
                </tr>
             </table>
+            <p class="IE">
+              This is me in my Favorite Beanie ^_^<br><br><br></p>
+              <img class="img_myBeanie" src="myBeanie.PNG">
+              <img class="img_myDiary" src="myDiary.PNG">
+              <img class="img_Pocoyo" src="Pocoyo.PNG"><br><br>
+            <p class="IE">
+              and That character is Pocoyo!! Cute little boy....<br>
+              He is one of my Favorite character ^&^<br>
+              +<br>
+              That black note is my Diary! 
+            </p>
+        </main>
+    </div>
+    <!-- grid2 : when width is shorter than 670px -------------------------------------------------------------------->
+    <div id="grid2">
+        <div class="banner">  
+          <div class="item1"><a href="home.html" title="Home">Home</a></div>
+          <div class="item2"><a href="sns.html" title="SNS">SNS</a></div>
+          <div class="item3"><a href="contact.html" title="">Contacts</a></div>
+          <div class="item4"><a href="tmi.html" title="TMI" style="color:rgb(18, 209, 91);">TMI</a></div>
+        </div>
+        <main>
+          <h3 class="intro">
+            <br>These are my FAVORITE songs and Photos!!
+          </h3>
+          <table class="table_song">
+              <tr>
+                <td>Mac Miller</td>
+                <td><a href="https://youtu.be/6bMmhKz6KXg?si=C5f4zuQEFOvHvlb1" target="_blank" title="Knock Knock">Knock Knock</a></td>
+              </tr>
+              <tr>
+                <td>Beenzino</td>
+                <td><a href="https://youtu.be/ojQoCfTRTkw?si=KQQFzZqkrPKk_KKT" target="_blank" title="Sandman">Sandman</a></td>
+              </tr>
+              <tr>
+                <td>Youra</td>
+                <td>구운듯한 얼굴이 너의 모티프</td>
+               </tr>
+          </table>
+          <p class="IE">This is me in my Favorite Beanie ^_^<br></p>
+          <div class="img">
+            <div calss="img1"><img class="img_Pocoyo" src="Pocoyo.PNG"></div><br><br>
+            <div class="img2"><img class="img_myBeanie" src="myBeanie.PNG"></div>
+            <div class="img3"><img class="img_myDiary" src="myDiary.PNG"></div>
+          </div>
+          <p class="IE">
+            and That character is Pocoyo!! Cute little boy....<br>
+            He is one of my Favorite character ^&^<br>
+            +<br>
+            That black note is my Diary! 
+          </p>
       </main>
     </div>
 </body>
