--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
     <div id="grid1">
       <aside class="menu">
         <!-- 이거 나중에 버튼으로 구현할 수 있으면 해봐 -->
-          <a href="home.html" title="Home">- Home</a><br>
+          <a href="home.html" title="Home" style="color:rgb(18, 209, 91);">- Home</a><br>
           <a href="sns.html" title="SNS">- SNS</a><br>
           <a href="contact.html" title="Contact">- Contact</a><br>
           <a href="tmi.html" title="TMI">- TMI</a>
@@ -43,10 +43,10 @@
             <button class="button1">Button</button>
         </main>
     </div>
-    <!-- when width is shorter than 670px -->
+    <!-- grid2 : when width is shorter than 670px -------------------------------------------------------------------->
     <div id="grid2">
         <div class="banner">
-          <div class="item1"><a href="home.html" title="Home">Home</a></div>
+          <div class="item1"><a href="home.html" title="Home" style="color:rgb(18, 209, 91);">Home</a></div>
           <div class="item2"><a href="sns.html" title="SNS">SNS</a></div>
           <div class="item3"><a href="contact.html" title="">Contacts</a></div>
           <div class="item4"><a href="tmi.html" title="TMI">TMI</a></div>
