--- a/tmi.html
+++ b/tmi.html
@@ -8,13 +8,13 @@
 <body>
     <!--header--------------------------------------------------------------------------------------->
     <header>
-      <a class="PageName" href="home.html" title="[Home] Hwang Yoojin">Yoojin.H</a>
+      <a class="PageName" href="index.html" title="[Home] Hwang Yoojin">Yoojin.H</a>
     </header>
     <!-- when width is longer than 700px ------------------------------------------------------------>
     <div id="grid1">
         <aside class="menu">
           <!-- 이거 나중에 버튼으로 구현할 수 있으면 해봐 -->
-            <a href="home.html" title="Home">- Home</a><br>
+            <a href="index.html" title="Home">- Home</a><br>
             <a href="sns.html" title="SNS">- SNS</a><br>
             <a href="contact.html" title="Contact">- Contact</a><br>
             <a href="tmi.html" title="TMI" style="color:rgb(18, 209, 91);">- TMI</a>
@@ -53,7 +53,7 @@
     <!-- grid2 : when width is shorter than 670px -------------------------------------------------------------------->
     <div id="grid2">
         <div class="banner">  
-          <div class="item1"><a href="home.html" title="Home">Home</a></div>
+          <div class="item1"><a href="index.html" title="Home">Home</a></div>
           <div class="item2"><a href="sns.html" title="SNS">SNS</a></div>
           <div class="item3"><a href="contact.html" title="">Contacts</a></div>
           <div class="item4"><a href="tmi.html" title="TMI" style="color:rgb(18, 209, 91);">TMI</a></div>
