--- a/sns.html
+++ b/sns.html
@@ -9,15 +9,31 @@
     <!--header--------------------------------------------------------------------------------------->
     <header>
       <a class="PageName" href="index.html" title="[Home] Hwang Yoojin">Yoojin.H</a>
+      <input type="button" value="OFF" style="background-color: rgb(131, 131, 131);" onclick="
+          document.querySelector('.PageName').style.color = 'rgb(128, 111, 77)';
+          document.querySelector('.PageName').style.borderColor='rgb(190, 173, 136)';
+          document.querySelector('.PageName').style.backgroundColor='rgb(216, 198, 159)';
+        ">
+        <input type="button" value="ON" style="background-color: rgb(255, 238, 0);" onclick="
+          document.querySelector('.PageName').style.color = 'rgb(61, 203, 247)';
+          document.querySelector('.PageName').style.borderColor='rgb(255, 139, 139)';
+          document.querySelector('.PageName').style.backgroundColor='rgb(255, 218, 224)';
+        ">
     </header>
     <!-- when width is longer than 700px ------------------------------------------------------------>
     <div id="grid1">
       <aside class="menu">
         <!-- 이거 나중에 버튼으로 구현할 수 있으면 해봐 -->
-          <a href="index.html" title="Home">- Home</a><br>
-          <a href="sns.html" title="SNS" style="color:rgb(18, 209, 91);">- SNS</a><br>
-          <a href="contact.html" title="Contact">- Contact</a><br>
-          <a href="tmi.html" title="TMI">- TMI</a>
+          <br>
+          <a href="index.html" title="Home">Home</a><br><br>
+          <b><a href="sns.html" title="SNS" style="
+          color:rgb(18, 209, 91); 
+          background-color: rgb(200, 255, 0);
+          border:2px solid rgb(255, 0, 221);
+          margin:2px 0;">
+          SNS</a></b><br><br>
+          <a href="contact.html" title="Contact">Contact</a><br><br>
+          <a href="tmi.html" title="TMI">TMI</a>
       </aside>
         <main>
             <img class="ggongzi" src="ggongzi.png">
@@ -41,7 +57,7 @@
           </table>
             <!--Button tag-->
             <button class="button1">Button</button>
-            <h2 style="margin-left:30px;">
+            <h2>
               [ Hwang Yoojin의 SNS 링크.. ]    
           </h2>
   
@@ -55,17 +71,18 @@
     <div id="grid2">
         <div class="banner">
           <div class="item1"><a href="index.html" title="Home">Home</a></div>
-          <div class="item2"><a href="sns.html" title="SNS" style="color:rgb(18, 209, 91);">SNS</a></div>
+          <div class="item2"><a href="sns.html" title="SNS" style="
+            color:rgb(18, 209, 91);"><b>SNS</b></a></div>
           <div class="item3"><a href="contact.html" title="">Contacts</a></div>
           <div class="item4"><a href="tmi.html" title="TMI">TMI</a></div>
         </div>
-        
-        <img src="ggongzi.png" width="100px" style="margin:30px;">
-        <p style="margin-left:30px;">
+        <main>
+          <br><br><img src="ggongzi.png" width="100px">
+        <p>
             안녕하세요 저는 <strong>황유진</strong>입니다.<br>
             저는 부경대학교에서 컴퓨터공학과 3학년에 재학 중입니다.<br><br>
         </p>
-        <table class="table1" border="1" style="margin-left:30px">
+        <table class="table1">
             <tr>
               <td>나이</td>
               <td>21</td>
@@ -80,15 +97,14 @@
              </tr>
         </table>
         <!--Button tag-->
-        <button class="button1" style="margin-left:30px;">Button</button>
-        <h2 style="margin-left:30px;">
-          [ Hwang Yoojin의 SNS 링크.. ]    
-      </h2>
+        <button class="button1">Button</button>
+        <h2>[ Hwang Yoojin의 SNS 링크.. ]</h2>
 
-      <p id="link" style="margin-left:40px;">
+      <p id="link">
           -><a href="https://blog.naver.com/dddpdpdppddd" target="_blank" title="Yoojin's Blog">Naver Blog</a><br>
           -><a href="https://www.instagram.com/hwngyoojin/" target="_blank" title="Yoojin's Blog">Instagram</a>
       </p>
+    </main>
     </div>
 </body>
 </html>
