Done Apr 10 coding.... Let's go to bed,,,,,

--- a/tmi.html
+++ b/tmi.html
@@ -6,106 +6,156 @@
     <link rel="stylesheet" href="tmi.css">
 </head>
 <body>
-    <!--header--------------------------------------------------------------------------------------->
-    <header>
-      <a class="PageName" href="index.html" title="[Home] Hwang Yoojin">Yoojin.H</a>
-      <input type="button" value="OFF" style="background-color: rgb(131, 131, 131);" onclick="
-          document.querySelector('.PageName').style.color = 'rgb(128, 111, 77)';
-          document.querySelector('.PageName').style.borderColor='rgb(190, 173, 136)';
-          document.querySelector('.PageName').style.backgroundColor='rgb(216, 198, 159)';
-        ">
-        <input type="button" value="ON" style="background-color: rgb(255, 238, 0);" onclick="
-          document.querySelector('.PageName').style.color = 'rgb(61, 203, 247)';
-          document.querySelector('.PageName').style.borderColor='rgb(255, 139, 139)';
-          document.querySelector('.PageName').style.backgroundColor='rgb(255, 218, 224)';
-        ">
-    </header>
-    <!-- when width is longer than 700px ------------------------------------------------------------>
-    <div id="grid1">
-        <aside class="menu">
-          <!-- 이거 나중에 버튼으로 구현할 수 있으면 해봐 -->
-          <br>
-          <a href="index.html" title="Home">Home</a><br><br>
-          <a href="sns.html"   title="SNS">SNS</a><br><br>
-          <a href="contact.html" title="Contact">Contact</a><br><br>
-          <b><a href="tmi.html"  title="TMI" style="
-            color:rgb(18, 209, 91); 
-            background-color: rgb(200, 255, 0);
-            border:2px solid rgb(255, 0, 221);">
-            TMI</a>
-          </b>
-        </aside>
-        <main>
-          <h3 class="intro">
-            <br>These are my FAVORITE songs and Photos!!
-          </h3>
-          <table class="table_song">
-              <tr>
-                <td>Mac Miller</td>
-                <td><a href="https://youtu.be/6bMmhKz6KXg?si=C5f4zuQEFOvHvlb1" target="_blank" title="Knock Knock">Knock Knock</a></td>
-              </tr>
-              <tr>
-                <td>Beenzino</td>
-                <td><a href="https://youtu.be/ojQoCfTRTkw?si=KQQFzZqkrPKk_KKT" target="_blank" title="Sandman">Sandman</a></td>
-              </tr>
-              <tr>
-                <td>Youra</td>
-                <td>구운듯한 얼굴이 너의 모티프</td>
-               </tr>
-            </table>
-            <p class="IE">
-              This is me in my Favorite Beanie ^_^<br><br><br></p>
-              <img class="img_myBeanie" src="myBeanie.PNG">
-              <img class="img_myDiary" src="myDiary.PNG">
-              <img class="img_Pocoyo" src="Pocoyo.PNG"><br><br>
-            <p class="IE">
-              and That character is Pocoyo!! Cute little boy....<br>
-              He is one of my Favorite character ^&^<br>
-              +<br>
-              That black note is my Diary! 
-            </p>
-        </main>
+  <!-- alret: What is Latte??? -->
+  <script>alert("Latte is milk in Italia")</script>
+<!--header--------------------------------------------------------------------------------------->
+  <header>
+    <a class="PageName" href="index.html" title="[Home] Hwang Yoojin">Yoojin.H</a>
+    <!-- header color button (ON/OFF) -->
+    <input type="button" value="ON" style="background-color: rgb(255, 238, 0);" onclick="
+      document.querySelector('.PageName').style.color = 'rgb(61, 203, 247)';
+      document.querySelector('.PageName').style.borderColor='rgb(255, 139, 139)';
+      document.querySelector('.PageName').style.backgroundColor='rgb(255, 218, 224)';
+    ">
+    <input type="button" value="OFF" style="background-color: rgb(131, 131, 131);" onclick="
+      document.querySelector('.PageName').style.color = 'rgb(128, 111, 77)';
+      document.querySelector('.PageName').style.borderColor='rgb(190, 173, 136)';
+      document.querySelector('.PageName').style.backgroundColor='rgb(216, 198, 159)';
+    ">
+  </header>
+<!-- grid1 : when width is longer than 1200px --------------------------------------------------->
+  <div id="grid1">
+    <!-- side bar -->
+    <aside class="menu"><br>
+      <a href="index.html"     title="Home">Home</a><br><br>
+      <a href="warning.html"   title="DANGER">DANGER</a><br><br>
+      <a href="contactme.html" title="Contact">Contact Me</a><br><br>
+      <b><a href="tmi.html"    title="TMI" style="
+        color:rgb(18, 209, 91); 
+        background-color: rgb(200, 255, 0);
+        border:2px solid rgb(255, 0, 221);">
+        TMI</a></b>
+    </aside>
+    <!-- main -->
+    <main>
+      <h3 class="intro">
+        <br>These are my FAVORITE songs and Photos!!
+      </h3>
+      <!-- Favorite song table -->
+      <table class="table_song">
+        <tr>
+          <td>Mac Miller</td>
+          <td><a href="https://youtu.be/6bMmhKz6KXg?si=C5f4zuQEFOvHvlb1" 
+            target="_blank" title="Knock Knock">
+            Knock Knock</a></td>
+        </tr>
+        <tr>
+          <td>Beenzino</td>
+          <td><a href="https://youtu.be/ojQoCfTRTkw?si=KQQFzZqkrPKk_KKT" 
+            target="_blank" title="Sandman">
+            Sandman</a></td>
+        </tr>
+        <tr>
+          <td>Youra</td>
+          <td><a href="https://youtu.be/bTA4Kvo2Rew?si=240P0FvmwHjzx8OO" 
+            target="_blank" title="구운듯한 얼굴이 너의 모티프">
+            구운듯한 얼굴이 너의 모티프</a></td>
+        </tr>
+      </table>
+      <!-- TMI Photos -->
+      <p class="IE">
+        This is me in my Favorite Beanie ^_^<br><br><br></p>
+        <img class="img_myBeanie" src="img_myBeanie.PNG">
+        <img class="img_myDiary" src="img_myDiary.PNG">
+        <img class="img_Pocoyo" src="img_Pocoyo.PNG"><br><br>
+      <p class="IE">
+        and That character is Pocoyo!! Cute little boy....<br>
+        He is one of my Favorite character ^&^<br>
+        +<br>
+        That black note is my Diary! 
+      </p>
+      <!-- TOO MUCH INFORMATION -->
+      <p class="realTMI">
+        (Wednesday, Apr 10)<br><br>
+        안녕하세요 사망년 황유진입니다.<br>
+        저는 오늘 저녁에 초밥과 족발.. 그리고 순대를 먹었어요~!~!<br>
+        아주 괴상한 조합이죠?<br>
+        그치만 맛있었어요<br>
+        CSS는 꽤나 재미가 있네요...<br>
+        완벽주의 성향 때문인지 계속 고치고 고치고 고치는 중이에요....<br>
+        근데 완벽하진 않다는 게 포인트입니다 ^_^
+        <br><br>
+        <b class="Q1">오늘의 궁금증 : 순대에 간장을 찍어 먹으면 무슨 맛이 날까?</b><br><br>
+        다들 궁금해지셨죠?<br>
+        다음에 순대 먹을 때 간장에 찍어서 드셔 보세요
+      </p>
+    </main>
+  </div>
+<!-- grid2 : when width is shorter than 1200px ------------------------------------------------->
+  <div id="grid2">
+    <!--banner-->
+    <div class="banner">  
+      <div class="item1"><a href="index.html" title="Home">Home</a></div>
+      <div class="item2"><a href="warning.html" title="DANGER">DANGER</a></div>
+      <div class="item3"><a href="contactme.html" title="">Contact Me</a></div>
+      <div class="item4"><a href="tmi.html" title="TMI" style="
+      color:rgb(18, 209, 91);"><b>TMI</b></a></div>
     </div>
-    <!-- grid2 : when width is shorter than 670px -------------------------------------------------------------------->
-    <div id="grid2">
-        <div class="banner">  
-          <div class="item1"><a href="index.html" title="Home">Home</a></div>
-          <div class="item2"><a href="sns.html" title="SNS">SNS</a></div>
-          <div class="item3"><a href="contact.html" title="">Contacts</a></div>
-          <div class="item4"><a href="tmi.html" title="TMI" style="
-          color:rgb(18, 209, 91);"><b>TMI</b></a></div>
-        </div>
-        <main>
-          <h3 class="intro">
-            <br><br>These are my FAVORITE songs and Photos!!
-          </h3>
-          <table class="table_song">
-              <tr>
-                <td>Mac Miller</td>
-                <td><a href="https://youtu.be/6bMmhKz6KXg?si=C5f4zuQEFOvHvlb1" target="_blank" title="Knock Knock">Knock Knock</a></td>
-              </tr>
-              <tr>
-                <td>Beenzino</td>
-                <td><a href="https://youtu.be/ojQoCfTRTkw?si=KQQFzZqkrPKk_KKT" target="_blank" title="Sandman">Sandman</a></td>
-              </tr>
-              <tr>
-                <td>Youra</td>
-                <td>구운듯한 얼굴이 너의 모티프</td>
-               </tr>
-          </table>
-          <p class="IE">This is me in my Favorite Beanie ^_^<br></p>
-          <div class="img">
-            <div calss="img1"><img class="img_Pocoyo" src="Pocoyo.PNG"></div><br><br>
-            <div class="img2"><img class="img_myBeanie" src="myBeanie.PNG"></div>
-            <div class="img3"><img class="img_myDiary" src="myDiary.PNG"></div>
-          </div>
-          <p class="IE">
-            and That character is Pocoyo!! Cute little boy....<br>
-            He is one of my Favorite character ^&^<br>
-            +<br>
-            That black note is my Diary! 
-          </p>
-      </main>
-    </div>
+    <!-- main -->
+    <main>
+      <h3 class="intro">
+        <br><br>These are my FAVORITE songs and Photos!!
+      </h3>
+      <!-- Favorite song table -->
+      <table class="table_song">
+        <tr>
+          <td>Mac Miller</td>
+          <td><a href="https://youtu.be/6bMmhKz6KXg?si=C5f4zuQEFOvHvlb1" 
+            target="_blank" title="Knock Knock">
+            Knock Knock</a></td>
+        </tr>
+        <tr>
+          <td>Beenzino</td>
+          <td><a href="https://youtu.be/ojQoCfTRTkw?si=KQQFzZqkrPKk_KKT" 
+            target="_blank" title="Sandman">
+            Sandman</a></td>
+        </tr>
+        <tr>
+          <td>Youra</td>
+          <td><a href="https://youtu.be/bTA4Kvo2Rew?si=240P0FvmwHjzx8OO" 
+            target="_blank" title="구운듯한 얼굴이 너의 모티프">
+            구운듯한 얼굴이 너의 모티프</a></td>
+        </tr>
+      </table>
+      <!-- TMI Photos -->
+      <p class="IE">This is me in my Favorite Beanie ^_^<br></p>
+      <div class="img">
+        <div calss="img1"><img class="img_Pocoyo" src="img_Pocoyo.PNG"></div><br><br>
+        <div class="img2"><img class="img_myBeanie" src="img_myBeanie.PNG"></div>
+        <div class="img3"><img class="img_myDiary" src="img_myDiary.PNG"></div>
+      </div>
+      <p class="IE">
+        and That character is Pocoyo!! Cute little boy....<br>
+        He is one of my Favorite character ^&^<br>
+        +<br>
+        That black note is my Diary! 
+      </p>
+      <!-- TOO MUCH INFORMATION -->
+      <p class="realTMI">
+        (Wednesday, Apr 10)<br><br>
+        안녕하세요 사망년 황유진입니다.<br>
+        저는 오늘 저녁에 초밥과 족발.. 그리고 순대를 먹었어요~!~!<br>
+        아주 괴상한 조합이죠?<br>
+        그치만 맛있었어요<br>
+        CSS는 꽤나 재미가 있네요...<br>
+        완벽주의 성향 때문인지 계속 고치고 고치고 고치는 중이에요....<br>
+        근데 완벽하진 않다는 게 포인트입니다 ^_^
+        <br><br>
+        <b class="Q1">오늘의 궁금증 : 순대에 간장을 찍어 먹으면 무슨 맛이 날까?</b><br><br>
+        다들 궁금해지셨죠?<br>
+        다음에 순대 먹을 때 간장에 찍어서 드셔 보세요
+      </p>
+    </main>
+  </div>
 </body>
 </html>
