--- a/index.html
+++ b/index.html
@@ -1,46 +1,85 @@
 <!DOCTYPE html>
-<html style="background-color: beige;">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>Hwang Yoojin</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <!--header--------------------------------------------------------------------------------------->
-    <header>
-      <a class="PageName" href="index.html" title="[Home] Hwang Yoojin">Yoojin.H</a>
-      <input type="button" value="OFF" style="background-color: rgb(131, 131, 131);" onclick="
-          document.querySelector('.PageName').style.color = 'rgb(128, 111, 77)';
-          document.querySelector('.PageName').style.borderColor='rgb(190, 173, 136)';
-          document.querySelector('.PageName').style.backgroundColor='rgb(216, 198, 159)';
-        ">
-        <input type="button" value="ON" style="background-color: rgb(255, 238, 0);" onclick="
-          document.querySelector('.PageName').style.color = 'rgb(61, 203, 247)';
-          document.querySelector('.PageName').style.borderColor='rgb(255, 139, 139)';
-          document.querySelector('.PageName').style.backgroundColor='rgb(255, 218, 224)';
-        ">
-    </header>
-    <!-- when width is longer than 700px ------------------------------------------------------------>
-    <div id="grid1">
-      <aside class="menu">
-        <!-- 이거 나중에 버튼으로 구현할 수 있으면 해봐 -->
-        <br>
-        <b><a href="index.html" title="Home" style="
-          color:rgb(18, 209, 91); 
-          background-color: rgb(200, 255, 0);
-          border:2px solid rgb(255, 0, 221);">
-          Home</a></b><br><br>
-        <a href="sns.html" title="SNS">SNS</a><br><br>
-        <a href="contact.html" title="Contact">Contact</a><br><br>
-        <a href="tmi.html" title="TMI">TMI</a>
-      </aside>
-      <main>
-          <img class="ggongzi" src="ggongzi.png">
-          <p>
-              안녕하세요 저는 <strong>황유진</strong>입니다.<br>
-              저는 부경대학교에서 컴퓨터공학과 3학년에 재학 중입니다.<br>
-          </p>       
-        <table class="table1">
+  <!-- alret: Buongiorno~!~~!-->
+  <script>alert("Buongiorno~")</script>
+<!--header--------------------------------------------------------------------------------------->
+  <header>
+    <a class="PageName" href="index.html" title="[Home] Hwang Yoojin">Yoojin.H</a>
+    <!-- header color button (ON/OFF) -->
+    <input type="button" value="ON" style="background-color: rgb(255, 238, 0);" onclick="
+      document.querySelector('.PageName').style.color = 'rgb(61, 203, 247)';
+      document.querySelector('.PageName').style.borderColor='rgb(255, 139, 139)';
+      document.querySelector('.PageName').style.backgroundColor='rgb(255, 218, 224)';
+    ">
+    <input type="button" value="OFF" style="background-color: rgb(131, 131, 131);" onclick="
+      document.querySelector('.PageName').style.color = 'rgb(128, 111, 77)';
+      document.querySelector('.PageName').style.borderColor='rgb(190, 173, 136)';
+      document.querySelector('.PageName').style.backgroundColor='rgb(216, 198, 159)';
+    ">
+  </header>
+<!-- grid1 : when width is longer than 1200px --------------------------------------------------->
+  <div id="grid1">
+    <!-- side bar -->
+    <aside class="menu"><br>
+      <b><a href="index.html"  title="Home" style="
+        color:rgb(18, 209, 91); 
+        background-color: rgb(200, 255, 0);
+        border:2px solid rgb(255, 0, 221);">
+        Home</a></b><br><br>
+      <a href="warning.html"   title="DANGER">DANGER</a><br><br>
+      <a href="contactme.html" title="ContactMe">Contact Me</a><br><br>
+      <a href="tmi.html"       title="TMI">TMI</a>
+    </aside>
+    <!-- main -->
+    <main>
+      <img class="ggongzi" src="img_ggongzi.png"><br><br>
+      <b class="intro">
+        Yoojin Hwang is a Junior 
+        undergraduate computer engineering student 
+        attending the PKNU.
+      </b>
+      <!-- private info table... -->
+      <table class="table1">
+        <tr>
+          <td>나이</td>
+          <td>21</td>
+        </tr>
+        <tr>
+          <td>생일</td>
+          <td>FEB 17</td>
+        </tr>
+        <tr>
+          <td>mbti</td>
+          <td>INFP</td>
+          </tr>
+      </table>
+    </main>
+  </div>
+<!-- grid2 : when width is shorter than 1200px ------------------------------------------------->
+  <div id="grid2">
+    <!--banner-->
+    <div class="banner">
+      <div class="item1"><a href="index.html" title="Home" style="
+        color:rgb(18, 209, 91);"><b>Home</b></a></div>
+      <div class="item2"><a href="warning.html"   title="DANGER">DANGER</a></div>
+      <div class="item3"><a href="contactme.html" title="ContactMe">Contact Me</a></div>
+      <div class="item4"><a href="tmi.html"   title="TMI">TMI</a></div>
+    </div>
+    <!-- main -->
+    <main>
+      <br><br><img src="img_ggongzi.png" width="100px">
+      <p>
+          안녕하세요 저는 <strong>황유진</strong>입니다.<br>
+          저는 부경대학교에서 컴퓨터공학과 3학년에 재학 중입니다.<br><br>
+      </p>
+      <!-- private info table... -->
+      <table class="table1">
           <tr>
             <td>나이</td>
             <td>21</td>
@@ -53,44 +92,8 @@
             <td>mbti</td>
             <td>INFP</td>
             </tr>
-        </table>
-          <!--Button tag-->
-          <button class="button1">Button</button>
-      </main>
-    </div>
-    <!-- grid2 : when width is shorter than 670px -------------------------------------------------------------------->
-    <div id="grid2">
-      <div class="banner">
-        <div class="item1"><a href="index.html" title="Home" style="
-          color:rgb(18, 209, 91);"><b>Home</b></a></div>
-        <div class="item2"><a href="sns.html"   title="SNS">SNS</a></div>
-        <div class="item3"><a href="contact.html" title="">Contacts</a></div>
-        <div class="item4"><a href="tmi.html"   title="TMI">TMI</a></div>
-      </div>
-      <main>
-        <br><br><img src="ggongzi.png" width="100px">
-        <p>
-            안녕하세요 저는 <strong>황유진</strong>입니다.<br>
-            저는 부경대학교에서 컴퓨터공학과 3학년에 재학 중입니다.<br><br>
-        </p>
-        <table class="table1">
-            <tr>
-              <td>나이</td>
-              <td>21</td>
-            </tr>
-            <tr>
-              <td>생일</td>
-              <td>FEB 17</td>
-            </tr>
-            <tr>
-              <td>mbti</td>
-              <td>INFP</td>
-              </tr>
-        </table>
-        <!--Button tag-->
-        <button class="button1">Button</button>
-        
+      </table>
     </main>
-    </div>
+  </div>
 </body>
 </html>
