[Apr11 morning code]

--- a/tmi.html
+++ b/tmi.html
@@ -3,32 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Hwang Yoojin</title>
-    <link rel="stylesheet" href="tmi.css">
+    <link rel="stylesheet" href="css/tmi.css">
 </head>
 <body>
-  <!-- alret: What is Latte??? -->
-  <script>alert("Latte is milk in Italia")</script>
 <!--header--------------------------------------------------------------------------------------->
   <header>
     <a class="PageName" href="index.html" title="[Home] Hwang Yoojin">Yoojin.H</a>
     <!-- header color button (ON/OFF) -->
-    <input type="button" value="ON" style="background-color: rgb(255, 238, 0);" onclick="
-      document.querySelector('.PageName').style.color = 'rgb(61, 203, 247)';
-      document.querySelector('.PageName').style.borderColor='rgb(255, 139, 139)';
-      document.querySelector('.PageName').style.backgroundColor='rgb(255, 218, 224)';
-    ">
-    <input type="button" value="OFF" style="background-color: rgb(131, 131, 131);" onclick="
-      document.querySelector('.PageName').style.color = 'rgb(128, 111, 77)';
-      document.querySelector('.PageName').style.borderColor='rgb(190, 173, 136)';
-      document.querySelector('.PageName').style.backgroundColor='rgb(216, 198, 159)';
-    ">
+    <button onclick="ON">ON</button>
+    <button onclick="OFF">OFF</button>
   </header>
 <!-- grid1 : when width is longer than 1200px --------------------------------------------------->
   <div id="grid1">
     <!-- side bar -->
     <aside class="menu"><br>
       <a href="index.html"     title="Home">Home</a><br><br>
-      <a href="warning.html"   title="DANGER">DANGER</a><br><br>
+      <a href="lab.html"   title="LAB">LAB</a><br><br>
       <a href="contactme.html" title="Contact">Contact Me</a><br><br>
       <b><a href="tmi.html"    title="TMI" style="
         color:rgb(18, 209, 91); 
@@ -65,9 +55,9 @@
       <!-- TMI Photos -->
       <p class="IE">
         This is me in my Favorite Beanie ^_^<br><br><br></p>
-        <img class="img_myBeanie" src="img_myBeanie.PNG">
-        <img class="img_myDiary" src="img_myDiary.PNG">
-        <img class="img_Pocoyo" src="img_Pocoyo.PNG"><br><br>
+        <img class="img_myBeanie" src="img/myBeanie.PNG">
+        <img class="img_myDiary" src="img/myDiary.PNG">
+        <img class="img_Pocoyo" src="img/Pocoyo.PNG"><br><br>
       <p class="IE">
         and That character is Pocoyo!! Cute little boy....<br>
         He is one of my Favorite character ^&^<br>
@@ -82,7 +72,7 @@
         아주 괴상한 조합이죠?<br>
         그치만 맛있었어요<br>
         CSS는 꽤나 재미가 있네요...<br>
-        완벽주의 성향 때문인지 계속 고치고 고치고 고치는 중이에요....<br>
+        사소한 게 마음에 안들어서 계속 고치고 고치고 고치는 중이에요....<br>
         근데 완벽하진 않다는 게 포인트입니다 ^_^
         <br><br>
         <b class="Q1">오늘의 궁금증 : 순대에 간장을 찍어 먹으면 무슨 맛이 날까?</b><br><br>
@@ -96,7 +86,7 @@
     <!--banner-->
     <div class="banner">  
       <div class="item1"><a href="index.html" title="Home">Home</a></div>
-      <div class="item2"><a href="warning.html" title="DANGER">DANGER</a></div>
+      <div class="item2"><a href="lab.html" title="LAB">LAB</a></div>
       <div class="item3"><a href="contactme.html" title="">Contact Me</a></div>
       <div class="item4"><a href="tmi.html" title="TMI" style="
       color:rgb(18, 209, 91);"><b>TMI</b></a></div>
@@ -130,9 +120,9 @@
       <!-- TMI Photos -->
       <p class="IE">This is me in my Favorite Beanie ^_^<br></p>
       <div class="img">
-        <div calss="img1"><img class="img_Pocoyo" src="img_Pocoyo.PNG"></div><br><br>
-        <div class="img2"><img class="img_myBeanie" src="img_myBeanie.PNG"></div>
-        <div class="img3"><img class="img_myDiary" src="img_myDiary.PNG"></div>
+        <div calss="img1"><img class="img_Pocoyo" src="img/Pocoyo.PNG"></div><br><br>
+        <div class="img2"><img class="img_myBeanie" src="img/myBeanie.PNG"></div>
+        <div class="img3"><img class="img_myDiary" src="img/myDiary.PNG"></div>
       </div>
       <p class="IE">
         and That character is Pocoyo!! Cute little boy....<br>
@@ -148,7 +138,7 @@
         아주 괴상한 조합이죠?<br>
         그치만 맛있었어요<br>
         CSS는 꽤나 재미가 있네요...<br>
-        완벽주의 성향 때문인지 계속 고치고 고치고 고치는 중이에요....<br>
+        사소한 게 마음에 안들어서 계속 고치고 고치고 고치는 중이에요....<br>
         근데 완벽하진 않다는 게 포인트입니다 ^_^
         <br><br>
         <b class="Q1">오늘의 궁금증 : 순대에 간장을 찍어 먹으면 무슨 맛이 날까?</b><br><br>
@@ -157,5 +147,22 @@
       </p>
     </main>
   </div>
+<!-- script ------------------------------------------------------------------------------------>
+  <script>
+    // alret: What is Latte???
+    alert("Latte is milk in Italia")
+    // 'ON' button
+    function ON() {
+      document.querySelector('.PageName').style.color = 'rgb(61, 203, 247)';
+      document.querySelector('.PageName').style.borderColor='rgb(255, 139, 139)';
+      document.querySelector('.PageName').style.backgroundColor='rgb(255, 218, 224)';
+    }
+    // 'OFF' button
+    function OFF() {
+      document.querySelector('.PageName').style.color = 'rgb(128, 111, 77)';
+      document.querySelector('.PageName').style.borderColor='rgb(190, 173, 136)';
+      document.querySelector('.PageName').style.backgroundColor='rgb(216, 198, 159)';
+    }
+  </script>
 </body>
 </html>
