--- a/index.html
+++ b/index.html
@@ -3,25 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Hwang Yoojin</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-  <!-- alret: Buongiorno~!~~!-->
-  <script>alert("Buongiorno~")</script>
 <!--header--------------------------------------------------------------------------------------->
   <header>
     <a class="PageName" href="index.html" title="[Home] Hwang Yoojin">Yoojin.H</a>
     <!-- header color button (ON/OFF) -->
-    <input type="button" value="ON" style="background-color: rgb(255, 238, 0);" onclick="
-      document.querySelector('.PageName').style.color = 'rgb(61, 203, 247)';
-      document.querySelector('.PageName').style.borderColor='rgb(255, 139, 139)';
-      document.querySelector('.PageName').style.backgroundColor='rgb(255, 218, 224)';
-    ">
-    <input type="button" value="OFF" style="background-color: rgb(131, 131, 131);" onclick="
-      document.querySelector('.PageName').style.color = 'rgb(128, 111, 77)';
-      document.querySelector('.PageName').style.borderColor='rgb(190, 173, 136)';
-      document.querySelector('.PageName').style.backgroundColor='rgb(216, 198, 159)';
-    ">
+    <button onclick="ON">ON</button>
+    <button onclick="OFF">OFF</button>
   </header>
 <!-- grid1 : when width is longer than 1200px --------------------------------------------------->
   <div id="grid1">
@@ -32,13 +22,13 @@
         background-color: rgb(200, 255, 0);
         border:2px solid rgb(255, 0, 221);">
         Home</a></b><br><br>
-      <a href="warning.html"   title="DANGER">DANGER</a><br><br>
+      <a href="lab.html"   title="LAB">LAB</a><br><br>
       <a href="contactme.html" title="ContactMe">Contact Me</a><br><br>
       <a href="tmi.html"       title="TMI">TMI</a>
     </aside>
     <!-- main -->
     <main>
-      <img class="ggongzi" src="img_ggongzi.png"><br><br>
+      <img class="ggongzi" src="img/ggongzi.png"><br><br>
       <b class="intro">
         Yoojin Hwang is a Junior 
         undergraduate computer engineering student 
@@ -67,13 +57,13 @@
     <div class="banner">
       <div class="item1"><a href="index.html" title="Home" style="
         color:rgb(18, 209, 91);"><b>Home</b></a></div>
-      <div class="item2"><a href="warning.html"   title="DANGER">DANGER</a></div>
+      <div class="item2"><a href="lab.html"   title="LAB">LAB</a></div>
       <div class="item3"><a href="contactme.html" title="ContactMe">Contact Me</a></div>
       <div class="item4"><a href="tmi.html"   title="TMI">TMI</a></div>
     </div>
     <!-- main -->
     <main>
-      <br><br><img src="img_ggongzi.png" width="100px">
+      <br><br><img src="img/ggongzi.png" width="100px">
       <p>
           안녕하세요 저는 <strong>황유진</strong>입니다.<br>
           저는 부경대학교에서 컴퓨터공학과 3학년에 재학 중입니다.<br><br>
@@ -95,5 +85,22 @@
       </table>
     </main>
   </div>
+<!-- script ------------------------------------------------------------------------------------>
+<script>
+  // alret: Ciao~!~~!
+  alert("Ciao~")
+  // 'ON' button
+  function ON() {
+    document.querySelector('.PageName').style.color = 'rgb(61, 203, 247)';
+    document.querySelector('.PageName').style.borderColor='rgb(255, 139, 139)';
+    document.querySelector('.PageName').style.backgroundColor='rgb(255, 218, 224)';
+  }
+  // 'OFF' button
+  function OFF() {
+    document.querySelector('.PageName').style.color = 'rgb(128, 111, 77)';
+    document.querySelector('.PageName').style.borderColor='rgb(190, 173, 136)';
+    document.querySelector('.PageName').style.backgroundColor='rgb(216, 198, 159)';
+  }
+</script>
 </body>
 </html>
